[project]
name = "plotly_calplot"
version = "0.1.21"
description = "Calendar Plot made with Plotly"
authors = [
    {name = "Bruno Rodrigues Silva", email = "b.rosilva1@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8,<4.0.0"
dependencies = [
    "plotly>=6.3.0,<6.4.0",
    "pandas",
    "numpy>=1.22.3,<2.0.0",
    "pytz>=2023.3.post1,<2024.0.0",
]

[project.urls]
Repository = "https://github.com/brunorosilva/plotly-calplot"

[tool.poetry]
# Poetry will read from [project] section above for metadata

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
# Main dependencies are defined in [project.dependencies] above

[tool.poetry.group.dev.dependencies]
black = "^24.0"
isort = "^5.10.1"
streamlit = "^1.3.0"
pytest = "^7.1.1"
pytest-cov = "^4.0.0"
flake8 = "^5.0.0"
vulture = "^2.3"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
